k8s/database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: database
  namespace: database
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: human-resources-data
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: database
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: human-resources-data
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app: database
  ports:
    - name: app-connection
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: database
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: human-resources-data
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/instance: human-resources-data
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: database
        app.kubernetes.io/part-of: human-resource
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: database
          image: postgres:10.15-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - name: app-connection
              containerPort: 5432
              protocol: TCP
          resources:
            requests:
              memory: 300M
              cpu: 300m
            limits:
              memory: 300M
              cpu: 300m
          readinessProbe:
            exec:
              command: ["psql", "-w", "-U", "quarkus_test", "-d", "quarkus_test", "-c", "SELECT 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
          livenessProbe:
            exec:
              command: ["psql", "-w", "-U", "quarkus_test", "-d", "quarkus_test", "-c", "SELECT 1"]
            initialDelaySeconds: 45
            timeoutSeconds: 2
