k8s/employee.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee
  namespace: employee
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: employee
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: employee
  namespace: employee
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: employee
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app: employee
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee
  namespace: employee
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: employee
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee
  template:
    metadata:
      labels:
        app: employee
        app.kubernetes.io/name: quarkus
        app.kubernetes.io/instance: employee
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: human-resource
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: employee
          image: serrodcal/quarkus-arch-employee-istio:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 300M
              cpu: 300m
            limits:
              memory: 300M
              cpu: 300m
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 4
            periodSeconds: 15
