k8s/human-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: human-resources
  namespace: human-resources
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: human-resources
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: human-resources
  namespace: human-resources
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: human-resources
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app: human-resources
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: human-resources
  namespace: human-resources
  labels:
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/instance: human-resources
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: human-resource
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: human-resources
  template:
    metadata:
      labels:
        app: human-resources
        app.kubernetes.io/name: quarkus
        app.kubernetes.io/instance: human-resources
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: human-resource
        app.kubernetes.io/managed-by: kubectl
      #annotations:
        #sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: human-resources
          image: serrodcal/quarkus-arch-human-resources-istio:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: 300M
              cpu: 300m
            limits:
              memory: 300M
              cpu: 300m
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 4
            periodSeconds: 15
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: human-resources-gateway
  namespace: human-resources
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: human-resources
  namespace: human-resources
spec:
  hosts:
  - "*"
  gateways:
  - human-resources-gateway
  http:
  - match:
    #- uri:
        #exact: /productpage
    - uri:
        prefix: /api/v1
    route:
    - destination:
        host: human-resources
        port:
          number: 8080
